[package]
name = "nes-rs"
version = "0.1.0"
authors = ["Przemyslaw Koziol <przemkoz85@gmail.com>"]
edition = "2018"
resolver = "2"

[[test]]
name = "branch_timing_tests"
path = "tests/branch_timing_tests.rs"
[[test]]
name = "vbl_nmi_timing"
path = "tests/vbl_nmi_timing.rs"
[[test]]
name = "instr_timing"
path = "tests/instr_timing.rs"
[[test]]
name = "blargg_ppu_tests"
path = "tests/blargg_ppu_tests.rs"
[[test]]
name = "apu_tests"
path = "tests/apu_tests.rs"
[[test]]
name = "sprite_0_hit_tests"
path = "tests/sprite_0_hit_tests.rs"
[[test]]
name = "mmc3_irq_tests"
path = "tests/mmc3_irq_tests.rs"
[[test]]
name = "cpu_interrupts_v2"
path = "tests/cpu_interrupts_v2.rs"

[profile.release] 
debug = false
lto = true
opt-level = 3
panic = "abort"

[target.'cfg(not(target_os = "emscripten"))'.dependencies]
sdl2 = {version = "0.34", default-features = false, features = ["static-link","use-vcpkg", "image"]}
nfd = "0.0.4"

[target.'cfg(target_os = "emscripten")'.dependencies]
sdl2 = {version = "0.34", default-features = false, features = ["image"]}
instant = {version = "0.1", features = ["wasm-bindgen"]}

[dependencies]
cfg-if = "0.1"
enum-tryfrom = "0.2.1"
enum-tryfrom-derive = "0.2.1"
imgui = "0.7.0"
imgui-opengl-renderer = { git = "https://github.com/selassje/rust-imgui-opengl-renderer" }
imgui-sdl2 = "0.14"
imgui-filedialog = { git = "https://github.com/selassje/imgui-filedialog-rs.git"}
gl = "0.10.0"
emscripten_main_loop = "0.1" 

[package.metadata.vcpkg]
dependencies = ["sdl2","sdl2-image[libjpeg-turbo,tiff,libwebp]"]
git = "https://github.com/microsoft/vcpkg"
rev = "fa1bbe097b26678"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }
