
[package]
name = "nes-rs"
version = "0.1.0"
authors = ["Przemyslaw Koziol <przemkoz85@gmail.com>"]
edition = "2021"

[[test]]
name = "branch_timing_tests"
path = "tests/branch_timing_tests.rs"
[[test]]
name = "vbl_nmi_timing"
path = "tests/vbl_nmi_timing.rs"
[[test]]
name = "instr_timing"
path = "tests/instr_timing.rs"
[[test]]
name = "blargg_ppu_tests"
path = "tests/blargg_ppu_tests.rs"
[[test]]
name = "apu_tests"
path = "tests/apu_tests.rs"
  [[test]]
name = "sprite_0_hit_tests"
path = "tests/sprite_0_hit_tests.rs"
[[test]]
name = "mmc3_irq_tests"
path = "tests/mmc3_irq_tests.rs"
[[test]]
name = "cpu_interrupts_v2"
path = "tests/cpu_interrupts_v2.rs"
[[test]]
name = "serialization"
path = "tests/serialization.rs"

[profile.release] 
debug = true
lto = true
opt-level = 3
panic = "unwind"


[target.'cfg(not(target_os = "emscripten"))'.dependencies]
sdl2 = {version = "0.36", default-features = false, features = ["static-link","use-vcpkg", "image"]}

[target.'cfg(target_os = "emscripten")'.dependencies]
sdl2 = {version = "0.36", default-features = false, features = ["image"]}
instant = {version = "0.1", features = ["wasm-bindgen"]}

[dependencies]
cfg-if = "1.0.4"
enum-tryfrom = "0.2.1"
enum-tryfrom-derive = "0.2.1"
git-version = "0.3.9"
imgui = "0.11.0"
imgui-sys = "0.11.0"
imgui-opengl-renderer = { git = "https://github.com/selassje/rust-imgui-opengl-renderer", rev = "b048f8cc769e6eb2e081e5aa3258642f60fecfba" }
imgui-sdl2 = "0.15.3"
imgui-filedialog = { git = "https://github.com/selassje/imgui-filedialog-rs.git", rev = "2cf7013c74892a065b99ba92eb0a7f40e176272d"}
gl = "0.14.0"
emscripten_main_loop = "0.1"
serde = { version = "1.0", features = ["derive","rc"] }
serde_json = "1.0.0"
serde_arrays = "0.2.0"
serde_stacker = "0.1.4"
enum_dispatch = "0.3.7"
yazi = "0.2.1"


[package.metadata.vcpkg]
dependencies = ["sdl2","sdl2-image[libjpeg-turbo,tiff,libwebp]"]
git = "https://github.com/microsoft/vcpkg"
rev = "84bab45d415d22042bd0b9081aea57f362da3f35"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }
